--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,8 @@ bin-release/
 *.air
 *.ipa
 *.apk
-
+SSO_1/venv
+SSO_2/venv
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
 # information for Eclipse / Flash Builder.
